# auto-entM

./: platformio.ini
TRIALS/python_server/: play_m.py  reciverserver.py
audio_process_server/: .gitignore  CMakeLists.txt  drogonread.md
audio_process_server/esp_receiver/: esp_audio_reciver.cpp
audio_process_server/esp_reciver/: esp_audio_reciver.cpp
audio_process_server/web_server/: main.cpp  server_state.h  shared_state.h
audio_process_server/web_server/static/: app.js  index.html  styles.css
python_server/: reciverserver.py
reciver/: code_reciver.cpp  esp_receiver_minimal  reciver
src/: main.cpp
